# gpgmepp

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  Makefile.am  NEWS  README  autogen.rc  configure.ac
build-aux/: git-log-footer
cmake/modules/: G10CMakeSettings.cmake  G10CompilerSettings.cmake
doc/: DCO  HACKING
src/: CMakeLists.txt  GpgmeppConfig-msvc.cmake.in.in  GpgmeppConfig-w32.cmake.in.in  GpgmeppConfig.cmake.in  GpgmeppConfig.cmake.in.in  GpgmeppConfigVersion.cmake.in  Makefile.am  callbacks.cpp  configuration.h  context.cpp  context.h  context_p.h  data.cpp  data.h  decryptionresult.h  editinteractor.cpp  encryptionresult.cpp  encryptionresult.h  error.cpp  error.h  eventloopinteractor.cpp  eventloopinteractor.h  flags.h  global.h  gpgmepp.pc.in  gpgsignkeyeditinteractor.cpp  key.cpp  key.h  keygenerationresult.h  randomresults.h  trustitem.cpp  trustitem.h  util.cpp  util.h  verificationresult.h
src/interfaces/: assuantransaction.h  dataprovider.h  statusconsumer.h
tests/: CMakeLists.txt  README  run-createkey.cpp  run-genrandom.cpp  run-getkey.cpp  run-keylist.cpp  run-verify.cpp  run-wkdlookup.cpp  t-flags.cpp  t-utils.cpp
